--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "passport": "^0.4.0",
+    "pg": "^7.4.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.22.7"
   }
 }
