--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/zizmir/projet-nodejs-groupe#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-ejs-extend": "0.0.1",
+    "express-session": "^1.15.6",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "passport": "^0.4.0",
